P1: added shift functionality. fixed sentence generator (cannot start or finnish with spaces)

--- a/projects/P1/css/keys.css
+++ b/projects/P1/css/keys.css
@@ -148,11 +148,28 @@
   grid-column: 16/18;
 }
 #k36{
+  grid-row: 7/9;
+  grid-column: 18/20;
+}
+#k37{
+  grid-row: 7/9;
+  grid-column: 20/22;
+}
+#k38{
+  grid-row: 7/9;
+  grid-column: 22/24;
+}
+#k39{
   grid-row: 1/3;
   grid-column: 21/25;
   font-size: 2vh;
 }
-#k37{
+#k40{
   grid-row: 9/11;
   grid-column: 8/18;
+}
+#k41{
+  grid-row: 9/11;
+  grid-column: 18/24;
+  font-size: 2vh;
 }
